fix: renamed lb control variables, doc typo and added 1 check for operator state when running extensions
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -128,7 +128,7 @@ The networking parameters concern the VCN and the subnets network configuration 
 You can leave most of the default options. However, you may want to change the following 2 parameters:
 
 * vcn_dns_label: this is the internal dns domain for resources created
-* vcn_name: this is the name of the vcn that will be prepended to the label prefix
+* vcn_name: this is the name of the vcn that will be appended to the label prefix
 
 ****
 If you need to change the default VCN's CIDR, note the following:
